--- a/haraka-acceptor/config/smtp.ini
+++ b/haraka-acceptor/config/smtp.ini
@@ -1,6 +1,6 @@
 ; address to listen on (default: all IPv6 and IPv4 addresses, port 25)
 ; use "[::0]:25" to listen on IPv6 and IPv4 (not all OSes)
-listen=127.0.0.1:2525
+listen=[::0]:2525
 
 ; Note you can listen on multiple IPs/ports using commas:
 ;listen=127.0.0.1:2529,127.0.0.2:2529,127.0.0.3:2530
@@ -15,8 +15,8 @@ listen=127.0.0.1:2525
 ;inactivity_timeout=300
 
 ; Drop privileges to this user/group
-;user=haraka
-;group=haraka
+;user=smtp
+;group=smtp
 
 ; Don't stop Haraka if plugins fail to compile
 ;ignore_bad_plugins=0
@@ -26,8 +26,8 @@ listen=127.0.0.1:2525
 
 ; Daemonize
 ;daemonize=true
-;daemon_log_file=/var/log/haraka.log
-;daemon_pid_file=/var/run/haraka.pid
+;daemon_log_file=/var/log/haraka_acceptor.log
+;daemon_pid_file=/var/run/haraka_acceptor.pid
 
 ; Spooling
 ; Save memory by spooling large messages to disk
